--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -359,37 +359,34 @@ en:
         heading: CCS Marketplace private beta
     home:
       index:
-        accreditation_of_suppliers: Accreditation of suppliers
-        all_suppliers_have_undergone: All suppliers have undergone background screening and safeguarding to DfE’s Keeping Children Safe in Education standards. They are audited and accredited against best practice standards in education recruitment.
+        accreditation_of_agencies: Accreditation of agencies
+        all_suppliers_have_undergone: All agencies have undergone background screening and safeguarding to DfE’s Keeping Children Safe in Education standards. They are audited and accredited against best practice standards in education recruitment.
         before_you_start: Before you start
-        buyers_obligations: Buyers’ obligations for supplier data
-        by_using_the_service: By using the service, you acknowledge and accept responsibility for keeping this information confidential in accordance with the requirements below, and not sharing it wider than your school.
-        by_using_this_service_you_agree: By using this service you acknowledge and agree to comply with the above requirements.
+        buyers_obligations: Buyers’ obligations for agency data
+        by_using_the_service: By using the service, you acknowledge and accept responsibility for keeping this information confidential plus the following requirements, and not sharing it wider than your school.
         details_of_how_long_you_want_the_worker: details of how long you will want the worker
-        ensure_that_the_confidential_information: ensure that the confidential information is stored securely and that access to it is restricted to those of your employees who need such access for the purposes of buying services under the framework agreement for supply teachers and temporary staff; and
-        immediately_notify_css: immediately notify CCS if you suspect unauthorised access, copying, use or disclosure of the confidential information.
-        in_consideration_of_being_given_use: 'In consideration of being given use of the confidential information included in the service, you and your employees shall:'
-        keep_the_confidential_information_confidential: keep the confidential information strictly confidential and not directly or indirectly reveal, report, copy, part with possession of, license, publish, transfer, communicate or disclose the confidential information in any manner whatsoever without Crown Commercial Service’s (CCS) prior written consent;
-        not_disclose_use_or_exploit: not disclose, use or exploit the confidential information for any purpose except to buy services under the CCS framework agreement for supply teachers and temporary staff;
+        in_consideration_of_being_given_use: 'In consideration of being given use of the confidential information included in the service, you and your employees will need to:'
+        keep_the_information_confidential: keep the information confidential and not share it in any way unless you have permission from Crown Commercial Service (CCS) in writing
+        make_sure_the_confidential_information: make sure the confidential information is stored securely and that only people using the service to buy under the framework have access to it
+        only_use_the_information: only use the information for buying services under the CCS framework agreement for supply teachers and temporary staff
         start_finding_supply_teachers: Start finding supply teachers and agency workers
         start_now: Start now
-        this_service_contains_pricing_information: This service contains pricing information for suppliers on the Agency Supply Teachers framework agreement. This is confidential and can be considered commercially sensitive.
+        tell_ccs_if_suspect: tell CCS if you suspect unauthorised access, copying, use or disclosure of the confidential information
+        this_service_contains_pricing_information_html: This service contains pricing information for agencies on the <a href="%{url}" aria-label="Deal for schools hiring supply teachers and agency workers">supply teachers deal</a>. This is confidential and can be considered commercially sensitive.
         title: Find supply teachers and agency workers
         to_find_permanent_teaching_staff_html: To find permanent teaching staff, use the <a aria-label="Visit the Teaching Vacancies service website" href="%{url}">Teaching Vacancies</a> service.
         use_this_service_to:
           calculate_the_maximum: calculate the maximum you could be charged to make your agency worker permanent
-          check_the_breakdown_of_rates: check the breakdown of the rates the suppliers charge
-          create_a_shortlist: create a shortlist of suppliers based on your needs and download it
+          create_a_shortlist: create a shortlist of agencies based on your needs and download it
           find_a_managed_service_provider: find a managed service provider, who can take on all your temporary staff needs
           find_and_hire_a_worker: find and hire a worker using an agency
           hire_a_specific_person: hire a specific person using an agency (a ‘nominated worker’)
           title: 'Use this service to:'
-          view_the_rates: view the rates the suppliers charge
+          view_the_rates: view the rates and breakdown of rates the agencies charge
         you_cant_use_the_service_if: You can’t use this service if you’re an independent school, unless you have charitable status.
-        you_shall_ensure_only_employees: You shall ensure that only employees are given access to the confidential information and you shall not give agents, sub-contractors, third parties nor other non-employees access to the confidential information.
-        you_shall_inform_your_employees: You shall inform your employees of the specially confidential nature of the information and ensure they agree to keep it confidential on terms no less onerous than those contained in this notice.
+        you_must_tell_your_employees: You must tell your employees of the confidential nature of the information and must also agree to the requirements. No agents, sub-contractors, third parties nor other non-employees can have access to the confidential information.
         you_will_need_to_have: 'You will need to have:'
-        you_will_need_your_dfe_sign_in: To use the service, you will need your DFE Sign-in email and password.
+        you_will_need_your_dfe_sign_in: To use the service, you will need your DFE Sign-in email and password. If you don’t have one you may be able to get one, or to access an offline version of the service.
         your_schools_postcode: your school’s postcode
       temp_to_perm_fee:
         after_12_weeks_and_enough_notice: Based on the information you provided, you’re taking the worker on after 12 working weeks and giving 4 weeks’ notice, so you can’t be charged a fee under this deal.
