(chore) renaming the title of the supplier list page and title of spreadsheets

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -327,11 +327,11 @@ en:
           header: What to do next
           sign_form_html: sign the <a href="%{form_url}">short order form</a> (also available in the documents section of the <a href="%{framework_url}">CCS framework</a> as ‘RM3826 Supply Teachers - Order Form Template (Short Form).docx’)
           sign_once: You only need to sign the form once to use this supplier for the duration of the framework (which runs until 29 August 2020).
-        download: Download shortlist of suppliers
+        download: Download shortlist of agencies
         download_aria_label: Download shortlist as Microsoft Excel file
         download_with_calculator: Download shortlist (with markup calculator)
         download_with_calculator_aria_label: Download shortlist (with markup calculator) as Microsoft Excel file
-        header: Supplier list
+        header: Agency list
         inputs:
           job_type: Job type
           looking_for: Looking for
