(chore) Change references to "suppliers" to "agencies"

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -303,8 +303,8 @@ en:
         title: Not permitted
   suppliers:
     unit:
-      one: supplier
-      other: suppliers
+      one: agency
+      other: agencies
   supply_teachers:
     branches:
       branch:
@@ -481,14 +481,14 @@ en:
     suppliers:
       master_vendor:
         column1: Job type
-        column2: Supplier mark-up
+        column2: Agency mark-up
       master_vendors:
         do_next:
           competition_online_html: you can also do this online, <a href="%{esourcing_url}">using CCS’s esourcing tool</a>
-          further_competition_html: run a further competition to select a supplier - there is <a href="%{advice_url}">advice from CCS</a> on how to do this -
+          further_competition_html: run a further competition to select an agency - there is <a href="%{advice_url}">advice from CCS</a> on how to do this -
           header: What to do next
           more_help: Contact supplyteachers@crowncommercial.gov.uk if you need more help running a further competition.
-          sign_form_html: select a supplier and <a href="%{form_url}">sign the full version order form</a> listed in the documents section of the CCS framework as ‘RM3826 Supply Teachers - Order Form Template (Full Version) V1.docx’
+          sign_form_html: select an agency and <a href="%{form_url}">sign the full version order form</a> listed in the documents section of the CCS framework as ‘RM3826 Supply Teachers - Order Form Template (Full Version) V1.docx’
         header: Master vendor managed service providers
         page_title: Master vendor managed service providers
       neutral_vendors:
